Added Code for Cross Validation and Grid Searching

--- a/Python_Code/Main_ML_Code_Physio_Back.ipynb
+++ b/Python_Code/Main_ML_Code_Physio_Back.ipynb
@@ -511,6 +511,334 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YyO21MkBUZ9H"
+      },
+      "source": [
+        "## Cross Validation and Grid Searching"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x-vP6zKHUifJ"
+      },
+      "source": [
+        "#Import important libraries and functions\n",
+        "import itertools\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "import pandas as pd\n",
+        "import seglearn as sgl\n",
+        "from seglearn.transform import FeatureRep, Segment, Interp\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+        "from tensorflow.python.keras.layers import Dense, LSTM, Conv1D\n",
+        "from tensorflow.python.keras.models import Sequential\n",
+        "from tensorflow.python.keras.wrappers.scikit_learn import KerasClassifier\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from tensorflow.python.keras.utils import np_utils\n",
+        "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, log_loss\n",
+        "from sklearn.metrics import classification_report, precision_recall_fscore_support\n",
+        "# from sklearn.metrics import plot_confusion_matrix\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.model_selection import cross_val_predict\n",
+        "from sklearn import metrics\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.colors import ListedColormap\n",
+        "from sklearn.metrics import f1_score, make_scorer, balanced_accuracy_score\n",
+        "from sklearn.model_selection import train_test_split, cross_validate\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import (TimeSeriesSplit, KFold, ShuffleSplit,\n",
+        "                                     StratifiedKFold, GroupShuffleSplit,\n",
+        "                                     GroupKFold, StratifiedShuffleSplit)\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wZBJd-nRUusn"
+      },
+      "source": [
+        "#Define 2 main Functions used for Grid Searching and Cross Validation\n",
+        "\n",
+        "#1 - The Plot confusion matrix function that takes in pred and true labels and \n",
+        "# outputs the corresponding confusion matrix -- originally implemented by David \n",
+        "# burns in his Seglearn Library\n",
+        "def plot_confusion_matrix(cm, classes,\n",
+        "                          normalize=True,\n",
+        "                          cmap=plt.cm.Blues):\n",
+        "    \"\"\" plots confusion matrix \"\"\"\n",
+        "    if normalize:\n",
+        "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+        "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+        "    plt.colorbar()\n",
+        "    tick_marks = np.arange(len(classes))\n",
+        "    plt.xticks(tick_marks, classes, rotation=45)\n",
+        "    plt.yticks(tick_marks, classes)\n",
+        "    fmt = '.2f' if normalize else 'd'\n",
+        "    thresh = cm.max() / 2.\n",
+        "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "        plt.text(j, i, format(cm[i, j], fmt),\n",
+        "                 horizontalalignment=\"center\",\n",
+        "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+        "\n",
+        "    plt.ylabel('True label')\n",
+        "    plt.xlabel('Predicted label')\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "#2 - The Plot Grid Search function takes the results of a grid search that had only \n",
+        "# 2 hyperparameters that were tunes and outputs the relationship between the 2 hyperparameters\n",
+        "# and the model's accuracy in the form of a plot\n",
+        "def plot_grid_search(cv_results, grid_param_1, grid_param_2, name_param_1, name_param_2):\n",
+        "    # plotting grid results from David Alvarez on Stack Overflow\n",
+        "\n",
+        "    # Get Test Scores Mean and std for each grid search\n",
+        "    scores_mean = cv_results['mean_test_score']\n",
+        "    scores_mean = np.array(scores_mean).reshape(len(grid_param_2), len(grid_param_1))\n",
+        "    scores_sd = cv_results['std_test_score']\n",
+        "    scores_sd = np.array(scores_sd).reshape(len(grid_param_2), len(grid_param_1))\n",
+        "\n",
+        "    # Plot Grid search scores\n",
+        "    _, ax = plt.subplots(1, 1)\n",
+        "\n",
+        "    # Param1 is the X-axis, Param 2 is represented as a different curve (color line)\n",
+        "    for idx, val in enumerate(grid_param_2):\n",
+        "        ax.plot(grid_param_1, scores_mean[idx, :], '-o', label=name_param_2 + ': ' + str(val))\n",
+        "\n",
+        "    ax.set_title(\"Grid Search Scores\", fontsize=20, fontweight='bold')\n",
+        "    ax.set_xlabel(name_param_1, fontsize=16)\n",
+        "    ax.set_ylabel('CV Average Score', fontsize=16)\n",
+        "    ax.legend(loc=\"best\", fontsize=15)\n",
+        "    ax.grid(True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ze5UwKTPWJCy"
+      },
+      "source": [
+        "Cross Validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VcB_LabKWMBK"
+      },
+      "source": [
+        "def run_model(model, alg_name, notation):\n",
+        "    # # use subject id to group folds\n",
+        "    splitter = GroupKFold(n_splits=n_splits)\n",
+        "    cvk = splitter.split(X,y[:,1],groups=y[:,0])\n",
+        "    cvk_list = list(cvk)\n",
+        "\n",
+        "    ##############################################################\n",
+        "    # Cross Validation and Calculate Multiple Metrics\n",
+        "    cv_scores = cross_validate(model, X[:,:],y[:,1], groups=y[:,0], cv=cvk_list, return_train_score=True, return_estimator=True)#scoring=scoring) \n",
+        "\n",
+        "    # Predictions\n",
+        "    y_pred = np.empty(y[:,1].shape[0],dtype=y[:,1].dtype.str)\n",
+        "    for idx, fold_model in enumerate(cv_scores['estimator']):\n",
+        "      train_idx,test_idx = cvk_list[idx]#next(cvk)\n",
+        "      y_pred[test_idx] = fold_model.predict(X[test_idx])\n",
+        "\n",
+        "    ##############################################################\n",
+        "    # # Output Results\n",
+        "    print(alg_name)\n",
+        "\n",
+        "    pd_cv = pd.DataFrame(cv_scores)\n",
+        "\n",
+        "    print(\"CV Average Scores: \")\n",
+        "    for metric in pd_cv.loc[:,pd_cv.columns != 'estimator']:\n",
+        "      print(metric + \": %0.2f (+/- %0.2f)\" % (pd_cv[metric].mean(), pd_cv[metric].std() * 2))\n",
+        "\n",
+        "    print(\"\\nCV Iteration Scores: \")  \n",
+        "    print(pd_cv[['fit_time','test_score','train_score']])\n",
+        "    print('\\n')\n",
+        "\n",
+        "    print(\"Classification Report: \")\n",
+        "    print(classification_report(y[:,1], y_pred))\n",
+        "\n",
+        "    print(\"Confusion Matrix: \")\n",
+        "    cm = confusion_matrix(y[:,1], y_pred)\n",
+        "    plot_confusion_matrix(cm,np.unique(y[:,1]))\n",
+        "\n",
+        "    return cv_scores\n",
+        "\n",
+        "##############################################################################\n",
+        "\n",
+        "n_splits = 6\n",
+        "cv_models = {}\n",
+        "\n",
+        "# ----- Random Forest ---------------\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "model = RandomForestClassifier(bootstrap=False,\n",
+        " max_depth= 57,\n",
+        " max_features='auto',\n",
+        " min_samples_leaf= 1,\n",
+        " min_samples_split= 20,\n",
+        " n_estimators= 100)\n",
+        "    #n_estimators = 100, min_samples_split = 10, min_samples_leaf = 4, bootstrap=False, max_features='sqrt')\n",
+        "name = 'rf'\n",
+        "cv_models[name] = run_model(model, \"Random Forest\", 'rf')\n",
+        "\n",
+        "# # ----- xgboost ------------\n",
+        "# # install xgboost\n",
+        "# # 'pip install xgboost' or https://stackoverflow.com/questions/33749735/how-to-install-xgboost-package-in-python-windows-platform/39811079#39811079\n",
+        "# from xgboost import XGBClassifier\n",
+        "\n",
+        "# model = XGBClassifier()\n",
+        "# notation = 'xg'\n",
+        "# cv_models[notation] = run_model(model, \"XGBoost\", 'xg')\n",
+        "\n",
+        "#############################################\n",
+        "#Save cv_models and results in object file for future reference in needed\n",
+        "# np.save('/home/abdallah/Documents/Cross_Validate_Best_3_Models_Segment_exercise_no_hist_corr.npy', cv_models)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vm4AYp4xWLgW"
+      },
+      "source": [
+        "Grid Searching"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PsZ-rJcBWvKR"
+      },
+      "source": [
+        "#######################################GRID SEARCHING ###################################################################\n",
+        "def plot_grid_search(cv_results, grid_param_1, grid_param_2, name_param_1, name_param_2):\n",
+        "    # plotting grid results from David Alvarez on Stack Overflow\n",
+        "\n",
+        "    # Get Test Scores Mean and std for each grid search\n",
+        "    scores_mean = cv_results['mean_test_score']\n",
+        "    scores_mean = np.array(scores_mean).reshape(len(grid_param_2), len(grid_param_1))\n",
+        "    scores_sd = cv_results['std_test_score']\n",
+        "    scores_sd = np.array(scores_sd).reshape(len(grid_param_2), len(grid_param_1))\n",
+        "\n",
+        "    # Plot Grid search scores\n",
+        "    _, ax = plt.subplots(1, 1)\n",
+        "\n",
+        "    # Param1 is the X-axis, Param 2 is represented as a different curve (color line)\n",
+        "    for idx, val in enumerate(grid_param_2):\n",
+        "        ax.plot(grid_param_1, scores_mean[idx, :], '-o', label=name_param_2 + ': ' + str(val))\n",
+        "\n",
+        "    ax.set_title(\"Grid Search Scores\", fontsize=20, fontweight='bold')\n",
+        "    ax.set_xlabel(name_param_1, fontsize=16)\n",
+        "    ax.set_ylabel('CV Average Score', fontsize=16)\n",
+        "    ax.legend(loc=\"best\", fontsize=15)\n",
+        "    ax.grid(True)\n",
+        "\n",
+        "def run_model(model, alg_name, notation):\n",
+        "    ##############################################################\n",
+        "    # # Output Model Name\n",
+        "    print(alg_name)\n",
+        "\n",
+        "    splitter = GroupKFold(n_splits=n_splits)\n",
+        "    cvk = splitter.split(data['X'],data['Y'][:,1],groups=data['Y'][:,0])\n",
+        "    cvk_list = list(cvk)\n",
+        "\n",
+        "    # clf = sgl.Pype([#('sensors', Sensor_Select(['A','B','C','D','E','F','G','H'],['acc','gyro','mag','quat','pres'])),\n",
+        "    #             ('interp', Interp(1. / 25., categorical_target=True)),\n",
+        "    #             ('seg', sgl.Segment()),\n",
+        "    #             ('ftr', sgl.FeatureRep(features=d)),\n",
+        "    #             ('scaler', StandardScaler()),\n",
+        "    #             (notation , model)])\n",
+        "    \n",
+        "    #################Segment Hyperparameters#######################\n",
+        "    # par_grid = {'seg__width': [12 ,25, 50, 75, 100, 125],\n",
+        "    #         'seg__overlap': [0., 0.2, 0.4, 0.6]}\n",
+        "\n",
+        "    ################# Random Forest Hyperparameters #######################\n",
+        "    # Number of trees in random forest\n",
+        "    n_estimators = [int(x) for x in np.linspace(start = 100, stop = 2000, num = 6)]\n",
+        "    # Number of features to consider at every split\n",
+        "    max_features = ['auto', 'sqrt']\n",
+        "    # Maximum number of levels in tree\n",
+        "    max_depth = [int(x) for x in np.linspace(10, 200, num = 5)]\n",
+        "    max_depth.append(None)\n",
+        "    # Minimum number of samples required to split a node\n",
+        "    min_samples_split = [2, 10, 20, 30]\n",
+        "    # Minimum number of samples required at each leaf node\n",
+        "    min_samples_leaf = [1, 2, 4, 8, 15]\n",
+        "    # Method of selecting samples for training each tree\n",
+        "    bootstrap = [True, False]\n",
+        "    # Create the random grid\n",
+        "    # par_grid = {'n_estimators': n_estimators,\n",
+        "    #               'max_features': max_features,\n",
+        "    #               'max_depth' : max_depth,\n",
+        "    #               'min_samples_split': min_samples_split,\n",
+        "    #               'min_samples_leaf': min_samples_leaf,\n",
+        "    #               'bootstrap': bootstrap}\n",
+        "\n",
+        "    ################# XGBoost Hyperparameters #######################\n",
+        "    par_grid = {\n",
+        "    'learning_rate': [0.05, 0.10, 0.20, 0.30],\n",
+        "    'max_depth': [3, 7, 15],\n",
+        "    'min_child_weight': [1, 4, 7],\n",
+        "    'subsample': [0.5, 0.7],\n",
+        "    'gamma' : [ 0.0, 0.2 , 0.4 ],\n",
+        "    'colsample_bytree': [0.3, 0.5, 0.7],\n",
+        "    'n_estimators' : [100, 200, 500],\n",
+        "    'objective': ['reg:squarederror'] }\n",
+        "\n",
+        "    #Grid Searching through the parameters\n",
+        "    gs = GridSearchCV(estimator = model, param_grid = par_grid, cv=cvk_list, n_jobs = -1,return_train_score=True) #scoring='f1_weighted', return_train_score=True,\n",
+        "    # gs = RandomizedSearchCV(estimator = model, param_distributions = par_grid, n_iter = 100, cv = cvk_list, random_state=42, n_jobs = -1, return_train_score=True)\n",
+        "\n",
+        "    gs.fit(X, y[:,1], groups = y[:,0])\n",
+        "\n",
+        "\n",
+        "    return gs\n",
+        "\n",
+        "##############################################################################\n",
+        "n_splits = 6\n",
+        "cv_models = {}\n",
+        "\n",
+        "# ----- Random Forest ---------------\n",
+        "# from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# model = RandomForestClassifier()\n",
+        "# name = 'rf'\n",
+        "# cv_models[name] = run_model(model, \"Random Forest\", 'rf')\n",
+        "\n",
+        "# # ----- xgboost ------------\n",
+        "# # install xgboost\n",
+        "# # 'pip install xgboost' or https://stackoverflow.com/questions/33749735/how-to-install-xgboost-package-in-python-windows-platform/39811079#39811079\n",
+        "from xgboost import XGBClassifier\n",
+        "\n",
+        "model = XGBClassifier()\n",
+        "notation = 'xg'\n",
+        "cv_models[notation] = run_model(model, \"XGBoost\", 'xg')\n",
+        "\n",
+        "#############################################\n",
+        "#Save cv_models and results in object file for future reference in needed\n",
+        "np.save('/home/abdallah/Documents/Grid_Search_XGBoost_exercise_no_hist_corr.npy', cv_models)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
